# cramjam

./: .gitignore  Cargo.toml  Cross.toml  Dockerfile  Makefile  README.md  benchmark-requirements.txt  cramjam.html  dev-requirements.txt  environment.yml  index.html  mkdocs.yml  package.json  pyproject.toml  pypy_patch.py  rustfmt.toml  search.js
.cargo/: config  config.toml
.github/: FUNDING.yml
.github/workflows/: CI-libcramjam.yml  CI-python.yml  CI.yml  master.yml  release.yml
benchmarks/: README.md  test_bench.py
benchmarks/data/: COPYING  alice29.txt.bz2  dickens.bz2  fireworks.jpeg.bz2  geo.protodata.bz2  lcet10.txt.bz2  nci.bz2  plrabn12.txt.bz2  urls.10K.bz2  x-ray.bz2
cli/: Cargo.toml
cli/src/src/: snappy.rs
cramjam/: __init__.pyi  brotli.html  bzip2.html  cramjam.html  deflate.html  experimental.html  gzip.html  gzip.pyi  lz4.html  snappy.html  xz.html  zlib.html  zlib.pyi  zstd.html
cramjam-cli/: Cargo.toml  README.md  pyproject.toml
cramjam-cli/src/: main.rs
cramjam-cli/tests/: test_cli.py
cramjam-core/: Cargo.toml
cramjam-core/src/: io.rs  lib.rs
cramjam-js/: .gitignore  Cargo.toml  README.md  package.json  tsconfig.json  vitest.config.ts
cramjam-js/src/: lib.rs
cramjam-js/tests/: index.test.ts
cramjam-lzo/: Cargo.toml  README.md
cramjam-lzo/src/: lib.rs
cramjam-python/: .readthedocs.yaml  Cargo.toml  Makefile  README.md  pyproject.toml
cramjam-python/benchmarks/: README.md  test_bench.py
cramjam-python/benchmarks/data/: Mark.Twain-Tom.Sawyer.txt.bz2  asyoulik.txt.bz2  html.bz2  html_x_4.bz2  kppkn.gtb.bz2  mr.bz2  ooffice.bz2  osdb.bz2  paper-100k.pdf.bz2  reymont.bz2  xml.bz2
cramjam-python/docs/: conf.py  index.md  requirements.txt
cramjam-python/src/: blosc2.rs  brotli.rs  bzip2.rs  deflate.rs  experimental.rs  gzip.rs  io.rs  lib.rs  lz4.rs  snappy.rs  xz.rs  zstd.rs
cramjam-python/tests/: test_blosc2.py  test_integration.py  test_rust_io.py  test_variants.py
cramjam-python/tests/data/integration/: plaintext.txt.bz2  plaintext.txt.lzma  plaintext.txt.zst
docs/: index.md
libcramjam/: Cargo.toml  README.md  cbindgen.toml
libcramjam/src/: blosc2.rs  brotli.rs  bzip2.rs  capi.rs  deflate.rs  gzip.rs  lib.rs  lz4.rs  lzma.rs  snappy.rs  xz.rs  zstd.rs
python/: Cargo.toml  Makefile  dev-requirements.txt
python/src/: cli.rs  lz4.rs
python/tests/: test_integration.py
src/: blosc2.rs  brotli.rs  bzip2.rs  cli.rs  deflate.rs  exceptions.rs  experimental.rs  gzip.rs  ideflate.rs  igzip.rs  io.rs  izlib.rs  lib.rs  lz4.rs  lzo.rs  snappy.rs  xz.rs  zlib.rs  zstd.rs
src/cramjam/: __init__.py  __init__.pyi  brotli.pyi  bzip2.pyi  deflate.pyi  lz4.pyi  snappy.pyi  xz.pyi  zstd.pyi
tests/: conftest.py  test_blosc2.py  test_buffer_view.py  test_cli.py  test_cramjam_pyodide.js  test_integration.py  test_no_numpy.py  test_rust_io.py  test_variants.py
tests/data/integration/: plaintext.txt.br  plaintext.txt.lz4  plaintext.txt.snappy
