[package]
name = "cramjam-python"
version = "2.8.4-rc5"
authors = ["Miles Granger <miles59923@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Thin Python bindings to de/compression algorithms in Rust"
readme = "README.md"
exclude = ["benchmarks/", "benchmark-requirements.txt"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "cramjam"
crate-type = ["cdylib"]

[features]
default                  = ["extension-module", "snappy", "lz4", "bzip2", "brotli", "xz", "zstd", "gzip", "deflate", "blosc2", "igzip"]
extension-module         = ["pyo3/extension-module"]
generate-import-lib      = ["pyo3/generate-import-lib"]  # needed for Windows PyPy builds

snappy                   = ["libcramjam/snappy"]
lz4                      = ["libcramjam/lz4"]
bzip2                    = ["libcramjam/bzip2"]
brotli                   = ["libcramjam/brotli"]
zstd                     = ["libcramjam/zstd"]

xz                       = ["xz-static"]
xz-static                = ["libcramjam/xz-static"]
xz-shared                = ["libcramjam/xz-shared"]

igzip                    = ["igzip-static"]
igzip-static             = ["libcramjam/igzip-static"]
igzip-shared             = ["libcramjam/igzip-shared"]
use-system-isal-static   = ["libcramjam/use-system-isal", "libcramjam/igzip-static"]
use-system-isal-shared   = ["libcramjam/use-system-isal", "libcramjam/igzip-shared"]

gzip                     = ["gzip-static"]
gzip-static              = ["libcramjam/gzip-static"]
gzip-shared              = ["libcramjam/gzip-shared"]

deflate                  = ["deflate-static"]
deflate-static           = ["libcramjam/deflate-static"]
deflate-shared           = ["libcramjam/deflate-shared"]

blosc2                   = ["blosc2-static"]
blosc2-static            = ["libcramjam/blosc2-static"]
blosc2-shared            = ["libcramjam/blosc2-shared"]
use-system-blosc2-static = ["libcramjam/use-system-blosc2", "libcramjam/blosc2-static"]
use-system-blosc2-shared = ["libcramjam/use-system-blosc2", "libcramjam/blosc2-shared"]

wasm32-compat            = ["libcramjam/wasm32-compat"]


[dependencies]
pyo3 = { version = "^0.22", default-features = false, features = ["macros"] }
# libcramjam = { version = "0.5.0", default-features = false }
libcramjam = { git = "https://github.com/cramjam/libcramjam.git", branch = "bump-isal", default-features = false }
# libcramjam = { path = "../libcramjam", default-features = false }

[build-dependencies]
pyo3-build-config = "^0.22"

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
opt-level = 3
