[tool.poetry]
name = "pyrus-cramjam"
version = "0.1.0"
description = "Very slim python bindings to various de/compression algorithms in rust."
authors = ["Miles Granger <miles59923@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
black = "^19.10b0"
maturin = "^0.7.9"

[build-system]
requires = ["poetry>=0.12", "setuptools>=41.0.0", "wheel", "toml"]
build-backend = "setuptools.build_meta"
