[project]
name = "cramjam"
version = "2.11.0"
keywords = ["compression", "decompression", "snappy", "zstd", "bz2", "gzip", "lz4", "brotli", "deflate", "blosc2"]
requires-python = ">=3.8"
license = { file = "LICENSE" }

[project.urls]
homepage = "https://github.com/milesgranger/pyrus-cramjam"
documentation = "https://docs.rs/cramjam/latest/cramjam"
repository = "https://github.com/milesgranger/pyrus-cramjam"

[build-system]
requires = ["maturin>=0.14"]
build-backend = "maturin"

[tool.maturin]
strip = true

[dependency-groups]
dev = [
    "ipython>=8.12.3",
    "pyright>=1.1.399",
    "ruff-lsp>=0.0.62",
]

[project.optional-dependencies]
dev = [
  "black==22.3.0",
  "numpy",
  "pytest>=5.30",
  "pytest-xdist",
  "pytest-benchmark",
  "hypothesis==6.60.0"
]
