[package]
name = "cramjam-cli"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
use-system-blosc2 = ["libcramjam/use-system-blosc2"]
blosc2-static = ["libcramjam/blosc2-static"]
blosc2-shared = ["libcramjam/blosc2-shared"]

[dependencies]
clap = { version = "^4.2", features = ["derive"] }
bytesize = "^1"
libcramjam = { path = "../libcramjam" }
# libcramjam = "0.3.0"
