[package]
name = "cramjam"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "JavaScript/TypeScript bindings to de/compression algorithms in Rust"
readme = "README.md"
repository = "https://github.com/milesgranger/cramjam"

[lib]
name = "cramjam"
crate-type = ["cdylib"]

[dependencies]
libcramjam = { version = "0.7.0", default-features = false, features = ["brotli", "snappy", "lz4"] }
wasm-bindgen = "0.2.100"
