[package]
name = "cramjam-python"
version = "2.8.4-rc1"
authors = ["Miles Granger <miles59923@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Thin Python bindings to de/compression algorithms in Rust"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "cramjam"
crate-type = ["cdylib"]

[features]
default = ["extension-module"]
extension-module = ["pyo3/extension-module"]
generate-import-lib = ["pyo3/generate-import-lib"]  # needed for Windows PyPy builds

blosc2-static = ["libcramjam/blosc2-static"]
blosc2-shared = ["libcramjam/blosc2-shared"]
use-system-blosc2 = ["libcramjam/use-system-blosc2"]


[dependencies]
pyo3 = { version = "^0.20", default-features = false, features = ["macros"] }
libcramjam = { version = "^0.4" }

[build-dependencies]
pyo3-build-config = "^0.20"
