[package]
name = "libcramjam"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "Compression library combining a plethora of algorithms in a similar as possible API"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
capi = ["libc"]
use-system-blosc2 = ["blosc2-rs/use-system-blosc2"]

[dependencies]
snap = "^1"
brotli = { version = "^3", default-features = false, features = ["std", "ffi-api"] }
bzip2 = "^0.4"
lz4 = "^1"
flate2 = "^1"
blosc2-rs = { git = "https://github.com/milesgranger/blosc2-rs.git", features = ["static"] }
libdeflater = "^1"
zstd = "0.13.0"
libc = { version = "0.2", optional = true }
xz2 = { version = "0.1.7", features = ["static"] }

[build-dependencies]
cbindgen = "^0.24"

[dev-dependencies]
inline-c = "0.1"

[package.metadata.capi.pkg_config]
strip_include_path_components = 1

[package.metadata.capi.library]
rustflags = "-Cpanic=abort"
name = "cramjam"

[package.metadata.capi.header]
name = "cramjam"
subdirectory = "cramjam"
